# asgvdzab

./: .gitignore  ANTLR_MANUAL_BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_README.md  BUILD_REQUIREMENTS.md  CHTL_CONSTRAINTS_GUIDE.md  CHTL_GLOBAL_STYLE_CONSTRAINTS_SUMMARY.md  CHTL_IMPLEMENTATION_REPORT.md  CHTL_LOCAL_SCRIPT_CONSTRAINTS_SUMMARY.md  CHTL_LOCAL_STYLE_CONSTRAINTS_SUMMARY.md  CHTL_SCRIPT_CONSTRAINTS_SUMMARY.md  CHTL_SYNTAX_EXAMPLES.md  CHTL语法文档.md  CHTL语法文档_old.md  CLEANUP_PLAN.md  CMOD_EXPORT_GUIDE.md  CMakeLists.txt  CMakeLists.txt.antlr  CONTRIBUTING.md  CreateMissingNodes.java  ENHANCED_IMPORT_IMPLEMENTATION_REPORT.md  FINAL_IMPLEMENTATION_REPORT.md  FUTURE_ROADMAP.md  FixANTLRAndParserIssues.java  FixANTLRClasses.java  FixAdvancedCompilationIssues.java  FixAllCompilationErrors.java  FixAllCompilationIssues.java  FixAllImports.java  FixAllIssues.java  FixAllProblems.java  FixCHTLJSContextFinal.java  FixCompilationErrors.java  FixCoreClasses.java  FixFileNaming.java  FixFinalIssues.java  FixImports.java  FixModelClasses.java  FixMoreCompilationIssues.java  FixMoreIssues.java  (+104 more)
CHTLCompiler/: CMakeLists.txt  README.md  TODO.md  build.sh  clean.sh  scanner_test  test.chtl  test.html  test_ast.cpp  test_ast_simple  test_ast_simple.cpp  test_attribute_system  test_attribute_system_simple.cpp  test_basic_syntax  test_basic_syntax_parser.cpp  test_basic_syntax_simple.cpp  test_chtljs_cutting.chtl  test_chtljs_cutting.html  test_cmod_cjmod_system.cpp  test_complete.chtl  test_configuration_system  test_configuration_system_simple.cpp  test_custom_system  test_custom_system_simple.cpp  test_enhanced_import.cpp  test_import_namespace_system  test_import_namespace_system_simple.cpp  test_lexer.cpp  test_lexer_simple  test_lexer_simple.cpp  test_origin_system  test_origin_system_simple.cpp  test_output.html  test_parser_system.cpp  test_scanner_config.cpp  test_smart_scanning.chtl  test_smart_scanning.html  test_statemachine_system.cpp  test_style_block  test_style_block_simple.cpp  (+2 more)
CHTLCompiler/src/: main.cpp
ChtlCompiler/: CMakeLists.txt  test_regex  test_transform
ChtlCompiler/Examples/: chtljs_demo.chtl  hello.chtl  simple_test.chtl  test_js.chtl  test_selector.chtl  test_simple_selector.chtl  test_virtual.chtl
ChtlCompiler/Src/: Main.cpp
ChtlCompiler/Test/: test_minimal.chtl  test_nospace.chtl  test_regex.cpp  test_spaces.chtl  test_transform.cpp  test_vir_simple.chtl
ChtlCompiler/Tests/: CMakeLists.txt  TestLexer.cpp
Src/: CMakeLists.txt  Main.cpp
Src/Common/: CompilerInterface.cpp  FragmentTypes.cpp  GlobalMap.cpp
Src/Scanner/: Token.cpp
Src/Test/: TokenDemo.cpp  TokenTest.cpp
antlr4-linux/: CMakeLists.txt
chtl-compiler/: CMakeLists.txt  README.md  TODO-8-STEPS.md  TODO-CHTL.md  basic_test.chtl  build.sh  complete_test.chtl  debug_lexer.cpp  debug_parser.cpp  debug_parser2.cpp  debug_simple.cpp  example.chtl  minimal.chtl  pom.xml  raw.chtl  simple.chtl  test_enhanced.chtl  test_lexer  test_lexer.cpp  test_parser_step.cpp  test_scanner_units.cpp  test_token_flow.cpp  trace_compile.cpp
chtl-compiler/examples/: chtljs_only.js  chtljs_test.chtl  chtljs_test.html  hello.chtl  simple.chtl  simple.html  simple_chtljs.chtl  test.chtl  test.html  test_basic_features.chtl  test_chtljs_simple.chtl  test_complete.chtl  test_completed_features.chtl  test_css_antlr.css  test_features_simple.chtl  test_local_styles.chtl  test_minimal.chtl  test_origin_only.chtl  test_script_simple.chtl  test_selector.chtl  test_simple.chtl  test_simple_style.chtl  test_slicing.chtl  test_style_no_class.chtl  test_template.chtl  test_template_simple.chtl
chtl-compiler/grammar/: CSS3.g4  ECMAScript.g4  SimpleCSS.g4
chtl-compiler/include/: chtl_compiler.h
chtl-compiler/src/: CMakeLists.txt  chtl_compiler_system.cpp  main.cpp
chtl-compiler/tests/: CMakeLists.txt  test_chtl_compiler.cpp  test_chtl_lexer.cpp  test_chtljs.cpp  test_chtljs_debug.cpp  test_compiler.cpp  test_minimal.cpp  test_scanner.cpp
chtl-compiler/tools/: antlr4
src/: CMakeLists.txt  main.cpp
src/Compiler/: CMakeLists.txt  CompilerDispatcher.cpp
src/Core/: ASTNode.cpp  CMakeLists.txt  Context.cpp  Token.cpp
src/Scanner/: CMakeLists.txt  UnifiedScanner.cpp
src/Utils/: CMakeLists.txt  FileUtils.cpp
src/ast/: ast_nodes.cpp  chtl_ast.cpp  chtl_js_ast.cpp
src/chtl/: CHTLCompiler.cpp  CHTLCompiler.hpp  CHTLContext.cpp  CHTLContext.hpp  CHTLGlobalMap.cpp  CHTLGlobalMap.hpp  CHTLLexer.cpp  CHTLLexer.hpp  CHTLState.cpp  CHTLState.hpp  CHTLToken.cpp  CHTLToken.hpp
src/chtljs/: CHTLJSCompiler.cpp  CHTLJSCompiler.hpp
src/cjmod/: cjmod_manager.cpp  cjmod_utils_stub.cpp
src/cmod/: cmod_manager.cpp
src/common/: AST.cpp  CodeFragment.hpp  FragmentType.hpp  Token.cpp  Utils.cpp  types.cpp
src/compiler/: cjmod_compiler_extension.cpp  cmod_compiler_extension.cpp  compiler_dispatcher.cpp
src/compilers/: CHTLCompiler.cpp  CHTLJSCompiler.cpp  CSSCompiler.cpp  JavaScriptCompiler.cpp  antlr_css_compiler.cpp  antlr_js_compiler.cpp  basic_chtl_compiler.cpp  chtl_compiler.cpp  css_compiler.cpp  javascript_compiler.cpp  js_compiler.cpp  modern_antlr_css_compiler.cpp  simple_css_compiler.cpp  simple_js_compiler.cpp
src/constraints/: chtl_global_style_constraint.cpp  chtl_js_constraint.cpp  chtl_local_script_constraint.cpp  chtl_local_style_constraint.cpp  chtl_script_constraint.cpp  raw_embedding_parser.cpp
src/core/: chtl_configuration.cpp  chtl_unified_scanner.cpp  compilation_context.cpp  compiler_dispatcher.cpp  constraint_validator.cpp  generator_comment_system.cpp  integrated_compiler_system.cpp  unified_scanner.cpp
src/css/: CSSCompiler.cpp  CSSCompiler.hpp
src/dispatcher/: CompilerDispatcher.cpp  CompilerDispatcher.h  CompilerDispatcher.hpp  compiler_dispatcher.cpp
src/generators/: chtl_generator.cpp
src/import/: advanced_import_manager.cpp  enhanced_import_manager.cpp
src/javascript/: JavaScriptCompiler.cpp  JavaScriptCompiler.hpp
src/lexer/: chtl_js_tokens.cpp  chtl_lexer.cpp  chtl_tokens.cpp  complete_chtl_tokens.cpp  global_map.cpp  lexer_state.cpp
src/merger/: HTMLOutput.cpp  (+3 more)
(+955 files in other folders)
