# 测试用例
file(GLOB TEST_SOURCES "*.cpp")

foreach(test_source ${TEST_SOURCES})
    get_filename_component(test_name ${test_source} NAME_WE)
    add_executable(${test_name} ${test_source})
    target_link_libraries(${test_name}
        chtl_scanner
        chtl_dispatcher
        chtl_compiler
        chtljs_compiler
        css_compiler
        js_compiler
        chtl_merger
    )
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()